--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -3,10 +3,10 @@ name: DebugBuild
 on:
   push:
     branches:
-    - master
+      - master
 
 env:
-  SOLUTION_FILE_PATH: project/GE3_sln
+  SOLUTION_FILE_PATH: project/CG2_00-01_4.15.sln
   CONFIGURATION: Debug
 
 jobs:
