--- a/.github/workflows/DebugBuild.yml
+++ b/.github/workflows/DebugBuild.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  SOLUTION_FILE_PATH: "project/CG2_00-01_4.15.sln"
+  SOLUTION_FILE_PATH: project/CG2_00-01_4.15.sln
   CONFIGURATION: Debug
 
 jobs:
